# shanuz

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
shanuz/: __init__.py  _clara.py  _sparse.py  _types.py  _utils.py  aggregate.py  anchors.py  assay.py  assay5.py  clustering.py  command.py  composition.py  datasets.py  dimreduc.py  generics.py  glmpca.py  graph.py  hto.py  integration.py  io.py  jackstraw.py  lazy.py  logmap.py  mapping.py  markers.py  mixscape.py  module_score.py  multimodal.py  multiseq.py  neighbor.py  neighbors.py  plotting.py  preprocessing.py  reduction.py  sctransform.py  shanuz.py  sketch.py  transfer.py  umap.py
shanuz/compat/: __init__.py  anndata.py
shanuz/mixins/: __init__.py  key_mixin.py
shanuz/spatial/: __init__.py  analysis.py  base.py  centroids.py  fov.py  loaders.py  molecules.py  segmentation.py  variable_features.py  visium.py
tests/: conftest.py  test_advanced_tutorial.py  test_analysis.py  test_anndata_compat.py  test_assay.py  test_assay5.py  test_bimod_de.py  test_cellcycle_tutorial.py  test_command.py  test_datasets_loaders.py  test_de_parity.py  test_deseq2_pseudobulk.py  test_dimreduc.py  test_dimreduc_tutorial.py  test_graph.py  test_hashing_tutorial.py  test_hto.py  test_integration.py  test_integration_tutorial.py  test_lazy.py  test_lazy_bpcells_parity.py  test_lazy_pipeline.py  test_logmap.py  test_mapping.py  test_markvariogram.py  test_mast_de.py  test_merscope_loader.py  test_mixscape.py  test_mixscape_tutorial.py  test_multimodal_tutorial.py  test_multimodal_wnn.py  test_multiseq.py  test_neighbor.py  test_new_features.py  test_objects_tutorial.py  test_packaging.py  test_pseudobulk_conserved.py  test_reductions_extra.py  test_refmap_tutorial.py  test_sctransform_r_fidelity.py  (+15 more)
tutorials/: README.md  advanced_pbmc8k_subclustering.md  cbmc_citeseq_tutorial.py  cbmc_citeseq_verify.R  cellcycle_vignette.md  compare_xenium_anchors.py  de_vignette.md  dimreduc_vignette.md  export_seuratdata.R  generate_advanced_plots.py  generate_cellcycle_plots.py  generate_de_plots.py  generate_dimreduc_plots.py  generate_hashing_plots.py  generate_integration_plots.py  generate_lazy_plots.py  generate_mixscape_plots.py  generate_multimodal_plots.py  generate_objects_plots.py  generate_plots.py  generate_refmap_plots.py  generate_sctransform_plots.py  generate_sketch_plots.py  generate_spatial_plots.py  generate_svf_plots.py  generate_visium_plots.py  hashing_vignette.md  ifnb_integration_tutorial.py  ifnb_integration_verify.R  ifnb_sketch_tutorial.py  ifnb_sketch_verify.R  integration_vignette.md  lazy_bpcells_tutorial.py  lazy_bpcells_verify.R  lazy_vignette.md  mixscape_vignette.md  multimodal_citeseq.md  objects_vignette.md  panc8_reference_mapping_tutorial.py  panc8_reference_mapping_verify.R  (+30 more)
tutorials/figures_spatial/: anchors.json  r_reference.json
