[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shanuz"
version = "0.2.0"
description = "Python single-cell genomics toolkit — a port of Seurat's core data structures and analysis pipeline"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Shanika Amarasoma", email = "shanika.amarasoma@gmail.com" },
]
keywords = ["single-cell", "RNA-seq", "bioinformatics", "scRNA-seq", "genomics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "packaging>=23.0",
]

[project.optional-dependencies]
analysis = [
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
    "numba>=0.59",
    "umap-learn>=0.5",
    "python-igraph>=0.11",
    "leidenalg>=0.10",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "scikit-misc>=0.3",
]
anndata = ["anndata>=0.10"]
integration = ["harmonypy>=0.0.9"]
deseq2 = ["pydeseq2>=0.4"]
dev = [
    "pytest>=7",
    "pytest-cov",
    "ruff",
    "mypy",
    "build",
    "twine",
]
all = ["shanuz[analysis,anndata,integration,deseq2,dev]"]

[project.urls]
Homepage = "https://github.com/GenomicAI/shanuz"
Repository = "https://github.com/GenomicAI/shanuz"
"Bug Tracker" = "https://github.com/GenomicAI/shanuz/issues"

[tool.hatch.build.targets.wheel]
packages = ["shanuz"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
# Pinned here, not just in CI's command, so a bare `mypy` checks exactly what CI
# checks. `ruff` takes its scope from the command line, where `ruff check shanuz`
# (75 errors) and `ruff check .` (163) are both correct and easy to confuse.
files = ["shanuz"]
# The scientific stack (scipy, sklearn, numba, umap-learn, igraph, anndata, ...)
# ships no type information. Without this the run is 222 errors, of which 139 are
# only "this third party has no stubs" — silencing them leaves 81 that are about
# our own code.
ignore_missing_imports = true
