[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shanuz"
version = "0.2.0"
description = "Python single-cell genomics toolkit — a port of Seurat's core data structures and analysis pipeline"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Shanika Amarasoma", email = "shanika.amarasoma@gmail.com" },
]
keywords = ["single-cell", "RNA-seq", "bioinformatics", "scRNA-seq", "genomics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "packaging>=23.0",
]

[project.optional-dependencies]
analysis = [
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
    "numba>=0.59",
    "umap-learn>=0.5",
    "python-igraph>=0.11",
    "leidenalg>=0.10",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "scikit-misc>=0.3",
]
anndata = ["anndata>=0.10"]
integration = ["harmonypy>=0.0.9"]
deseq2 = ["pydeseq2>=0.4"]
dev = [
    "pytest>=7",
    "pytest-cov",
    "ruff",
    "mypy",
    "build",
    "twine",
    # tomllib is stdlib from 3.11; without this the 3.10 leg skips
    # test_version_matches_pyproject instead of running it.
    "tomli>=2.0 ; python_version < '3.11'",
]
all = ["shanuz[analysis,anndata,integration,deseq2,dev]"]

[project.urls]
Homepage = "https://github.com/GenomicAI/shanuz"
Repository = "https://github.com/GenomicAI/shanuz"
"Bug Tracker" = "https://github.com/GenomicAI/shanuz/issues"

[tool.hatch.build.targets.wheel]
packages = ["shanuz"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
# Deliberately no `python_version`. Pinning it to our 3.10 floor also makes mypy
# parse every *followed* import as 3.10, third-party source included — and
# `anndata>=0.10` resolves to 0.13.2 on Python 3.12, which uses PEP 695
# `def _reduce[T](...)` syntax. mypy then aborts the whole run with "errors
# prevented further checking" and silently checks nothing, while `|| true` keeps
# CI green. Each leg targets its own interpreter instead; the 3.10 leg is what
# proves the package still supports 3.10.
#
# Scope is pinned here rather than only in CI's command, so a bare `mypy` checks
# exactly what CI checks. `ruff` takes its scope from the command line, where
# `ruff check shanuz` (75 errors) and `ruff check .` (163) are both correct and
# easy to confuse.
files = ["shanuz"]
# The scientific stack (scipy, sklearn, numba, umap-learn, igraph, anndata, ...)
# ships no type information. Without this, ~140 errors saying only "this third
# party has no stubs" drown the ~80 that are about our own code.
ignore_missing_imports = true
